--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 border: black;
 border-radius: 2px;
-background-color: white;
+background:url("https://i.pinimg.com/originals/3b/39/2b/3b392be0ffe869c1c036ace3277f88c6.jpg")
 }
 
 h2 {
@@ -25,6 +25,7 @@ font-weight: 400;
 height: auto;
 line-height: 20px;
 text-align: right;
+
 }
 
 img {
@@ -32,3 +33,4 @@ img {
     margin: auto;
     position: right;
 }
+
