fahrenheit to celcius conversion

--- a/style.css
+++ b/style.css
@@ -31,3 +31,10 @@ li {
   text-decoration: none;
   list-style-type: none;
 }
+
+.weather-temperature .active:hover {
+  color: rgb(33, 33, 33);
+  text-decoration: ;
+  cursor: default;
+  text-decoration: none;
+}
