--- a/style.css
+++ b/style.css
@@ -1,36 +1,46 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
-  position: relative;
-  font-family: roboto, arial, sans-serif;
-  font-size: 50px;
-  line-height: 16px;
-  color: rgb(36, 38, 41);
-  padding-top: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 45px;
+  color: rgb(68, 65, 65);
+
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 60px;
+  border: 1px solid black;
+  border-radius: 5px;
+  
 }
 
 h2 {
-  position: relative;
-  font-family: roboto, arial, sans-serif;
-  font-size: 25px;
-  line-height: 16px;
-  color: rgb(112, 117, 122);
-  padding-top: 25px;
+  text-align: right;
+  font-size: 15px;
+
+
 }
 
-body {
-  padding: 20em;
-  background-size: 100% 100%;
-  outline: 2px black;
-  background-repeat: no-repeat;
+.weather-details {
+  text-align: left;
+
+  text-emphasis: none;
+  font-size: 15px;
+
+}
+
+.icon-temp {
+  text-emphasis:none;
+  text-decoration: none;
+
+  font-size: 30px;
 }
 
 li {
-  text-decoration: none;
-  list-style-type: none;
-}
-
-.weather-temperature .active:hover {
-  color: rgb(33, 33, 33);
-  text-decoration: ;
-  cursor: default;
-  text-decoration: none;
+  list-style: none;
 }
